2003-04-06 23:30  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/base/GSCategories.h (GS_USEIDLIST): Make the
	implementation match the actual use in NSArray and NSSet. Clarify
	documentation.

2003-04-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: (GSPerformHolder) execute perform operations
	in the same order in which they were submitted.
	* Headers/GNUstep/base/GSCategories.h: Added two new macros to
	agressively optimise the use of varargs when initialising arrays
	etc by avoiding multiple allocation/reallocation of memory to hold
	arrays of objects taken from the varargs list.
	* Source/NSArray.m: Use the new macros.

2003-04-04  Stephane Corthesy <stephane@sente.ch>

	* macosx/config.h, macosx/preface.h: Update.
	* macosx/gnustep.pbproj/project/pbxproj: Use relative paths.

2003-04-04  Adam Fedor  <fedor@gnu.org>

	* Source/Additions/GSCompatibility.m ([NSString(GSCompatibility)
	-substringFromRange:]): Add.

2003-04-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSInvocation: Added NS_INVOCATION asnd NS_MESSAGE
	* Source/NSInvocation.m: Support the two new macros. Documented.
	* Testing/nsinvocation.m: Trivial tests added.
        * Documentation/OpenStepCompliance.gsdoc: Updated.
	* Source/NSConnection.m: ([-forwardInvocation:forProxy:]) set
	invocation target explicitly, in case this was called as a result
	of a manual setup of the invocation rather than real forwarding.

2003-04-03  Adam Fedor  <fedor@gnu.org>

	* Documentation/OpenStepCompliance.gsdoc: New file.
	* Documentation/Base.gsdoc: Reference it.
	* Source/DocMakefile: Update.

2003-04-02  Stephane Corthesy <stephane@sente.ch>

	* Source/Additions/GSCompatibility.m: Fix up incorrectly applied 
	patch.
	* Source/Additions/Unicode.m (GSEncodingName): Don't define if
	NeXT_Foundation_Library.

2003-04-02  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/Foundation.h: Revert previous change

2003-04-02  Richard Frith-Macdonald <rfm@gnu.org>
